# cronplaner

./: .env.example  Cargo.toml  Makefile  README.md
example/: appointments.toml
src/: configuration.rs  main.rs  view.rs
