[package]
name = "cronplaner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
clap = "4.5.27"
localzone = { git = "https://github.com/DayVil/localzone.git", branch = "main", features = ["chrono-tz", "auto_validation"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[features]
example = []
